# test_llm_code_langchain

./: .env  README.md  query_data.py  requirements.txt
22-02-2024/: compare_embeddings.py  create_database.py  query_data_streamlit.py  query_data_streamlit_chatbot.py
22-02-2024/chroma/: chroma-collections.parquet
23-02-2024/: Clear_GPT_copy.py  RAG_langchain.py
23-02-2024/GPT_ONLY/: Clear_GPT.py  create_database.py
23-02-2024/GPT_ONLY/chroma/3cf905ee-41c6-4bc7-aa82-e93139743fc1/: index_metadata.pickle
24-02-2024/my-app/: .envrc  pyproject.toml
24-02-2024/my-app/app/: server.py
24-02-2024/my-app/data/chroma/: chroma-collections.parquet
24-02-2024/my-app/scripts/: create_database.py
25-02-2024/my-app/: pyproject.toml
25-02-2024/my-app/app/: server.py
25-02-2024/my-app/data/chroma/6722954f-66c1-452f-8220-4c064fbfb737/: index_metadata.pickle
25-02-2024/my-app/scripts/: create_database.py
